--- a/index.html
+++ b/index.html
@@ -30,22 +30,33 @@
 	<div class="jumbotron">
 		<div class="container">
 			<h1>#isawthis</h1>
-			<p>Report and monitor sketchy activity</p>
-			<p>
-				<a class="social" href="http://twitter.com/hashtag/isawthis?src=hash"><i class="fa fa-twitter fa"></i></a>
-				<a class="social" href="http://github.com/jordanhbraun/isawthis"><i class="fa fa-github-alt fa"></i></a>
-			</p>	
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<p><i class="fa fa-pencil-square-o"></i></br>Use #isawthis</p>	
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<p><i class="fa fa-map-marker"></i></br>Turn on location</p>	
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+					<p><i class="fa fa-twitter fa"></i></br>Tweet</p>	
+				</div>
+			</div>	
 		</div>
 	</div>	
 	<div class="container"</div>
 		<div class="row">
-      <div id="map-container" class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-      </div>
+      		<div id="map-container" class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+      		</div>
 			<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <a class="twitter-timeline"  href="https://twitter.com/search?q=%23isawthis"  data-widget-id="472798293068492800">Tweets about "#isawthis"</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
-      </div>
-		</div>		
+        		<a class="twitter-timeline"  href="https://twitter.com/search?q=%23isawthis"  data-widget-id="472798293068492800">Tweets about "#isawthis"</a>
+        		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
+      		</div>
+		</div>	
+	<p>
+				<a class="social" href="http://twitter.com/hashtag/isawthis?src=hash"><i class="fa fa-twitter fa-3x"></i></a>
+				<a class="social" href="http://github.com/jordanhbraun/isawthis"><i class="fa fa-github-alt fa-3x"></i></a>
+			</p>
+
 	</div>
 
 
